--- a/src/app/tables/tables.component.html
+++ b/src/app/tables/tables.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <div class="card card-crud" (click)="modalTableAddProduto()">
+                <div class="card card-crud" (click)="adicionaProduto()">
                     <div class="card-crud-icons pe-7s-plus">
                         
                     </div>
@@ -10,7 +10,7 @@
                         Adicionar Produto
                     </div>
                 </div>
-                <div class="card card-crud" (click)="modalTableAddCategoria()">
+                <div class="card card-crud" (click)="adicionaCategoria()">
                     <div class="card-crud-icons pe-7s-plus">
 
                     </div>
@@ -18,7 +18,7 @@
                         Adicionar Categoria
                     </div>
                 </div>
-                <div class="card card-crud" (click)="modalTableAddPedido()">
+                <div class="card card-crud" (click)="adicionaPedido()">
                     <div class="card-crud-icons pe-7s-plus">
                         
                     </div>
@@ -45,10 +45,10 @@
                                         </tr>
                                     </thead>
                                     <tbody >
-                                        <tr *ngFor="let item of listaObjetosProduto" (click)="editaProduto()">
+                                        <tr *ngFor="let item of listaObjetosProdutos" (click)="editaProduto()">
                                             <td>{{ item.id }}</td>
-                                            <td>{{ item.nome }}</td>
-                                            <td>{{ item.category.tipo }}</td>
+                                            <td>{{ item.nome | uppercase}}</td>
+                                            <td>{{ item.category.tipo | uppercase }}</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -73,10 +73,10 @@
                                             <th>Descrição</th>
                                         </tr>
                                     </thead>
-                                    <tbody >
-                                        <tr *ngFor="let item of listaObjetosCategoria" (click)="editaCategoria()" (click)="enviaIdCategoria(item.id, item.tipo)">
+                                    <tbody>
+                                        <tr *ngFor="let item of listaObjetosCategorias" (click)="editaCategoria()" (click)="enviaIdCategoria(item.id, item.tipo)">
                                             <td> {{ item.id }} </td>
-                                            <td> {{ item.tipo }} </td>
+                                            <td> {{ item.tipo | uppercase }} </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -96,25 +96,25 @@
                             </div>
                             <div class="content table-responsive t-full-width">
                                 <table class="table table-hover table-striped table-responsive" id="tabela">
-                                        <thead>
-                                            <tr>
-                                                <th>Id</th>
-                                                <th>Descrição</th>
-                                                <th>Valor</th>
-                                                <th>Solicitado</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody >
-                                            <tr *ngFor="let item of listaObjetosPedido" (click)="editaPedido()">
-                                                <td>{{ item.id }}</td>
-                                                <td>{{ item.titulo }}</td>
-                                                <td>{{ item.total }}</td>
-                                                <td>{{ item.user_id }}</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
+                                    <thead>
+                                        <tr>
+                                            <th>Id</th>
+                                            <th>Descrição</th>
+                                            <th>Valor</th>
+                                            <th>Solicitado</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr *ngFor="let item of listaObjetosPedidos" (click)="editaPedido()">
+                                            <td>{{ item.id }}</td>
+                                            <td>{{ item.titulo | uppercase }}</td>
+                                            <td>{{ item.total }}</td>
+                                            <td>{{ item.user_id }}</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
-                        </div>    
+                        </div>
                     </mat-tab>
                 </mat-tab-group>
 
