--- a/src/app/modal/modal-table/modal-table-adicionar-produto/modal-table-adicionar-produto.component.html
+++ b/src/app/modal/modal-table/modal-table-adicionar-produto/modal-table-adicionar-produto.component.html
@@ -18,7 +18,7 @@
     <mat-select [(ngModel)]="categoriaSelecionada" name="categoria">
 
       <mat-option 
-        *ngFor="let item of listaObjectCategoria" [value]="item">
+        *ngFor="let item of listaObjectCategory" [value]="item">
           {{ item.tipo }}
       </mat-option>
     </mat-select>
