--- a/src/app/modal/modal-editar/modal-editar-produto/modal-editar-produto.component.html
+++ b/src/app/modal/modal-editar/modal-editar-produto/modal-editar-produto.component.html
@@ -1,16 +1,31 @@
 <p class="title"> Produto - Edição </p>
+<h6 class="subtitle">id: {{ data._id }} - atual: {{ data._nome }}</h6>
+<h6 class="subtitle">id: {{ data._id_categoria }} - categoria: {{ data._categoria }}</h6>
 <hr>
 
 <mat-form-field>
   <input matInput type="text" placeholder="Descrição do Produto">
 </mat-form-field>
 
+<mat-form-field class="select">
+  <mat-placeholder>
+    Categoria
+  </mat-placeholder>
+  <mat-select [(ngModel)]="categoriaSelecionada" name="categoria">
+
+    <mat-option 
+      *ngFor="let item of listaObjectCategoria" [value]="item">
+        {{ item.tipo }}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
+
 <div class="botoes">
   <div class="btn-left">
-    <button type="submit" class="btn btn-atencao">Alterar</button>
+    <button type="submit" class="btn btn-atencao" (click)="alter()">Alterar</button>
   </div>
   <div class="btn-right">
-    <button type="submit" class="btn btn-remover">Excluir</button>
+    <button type="submit" class="btn btn-remover" (click)="disabled()">Desabilitar</button>
   </div>
 </div>
 
