--- a/src/app/modal/modal-editar/modal-editar-produto/modal-editar-produto.component.scss
+++ b/src/app/modal/modal-editar/modal-editar-produto/modal-editar-produto.component.scss
@@ -1,16 +1,23 @@
 @import "../../../../styles.css";
 
 .btn-left{
-    padding-top: 99px;
+    padding-top: 137px;
     padding-left: 90px;
     float: left;
     padding-left: 0px;
 }
 .btn-right{
-    padding-top: 99px;
+    padding-top: 137px;
     padding-left: 90px;
     float: right;
 }
 mat-form-field{
+    width: 100%;
+}
+.subtitle{
+    color: green;
+    font-size: 10px;
+}
+.select{
     width: 100%;
 }
